Fixed white space gap in .divider

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ p {
   padding: 80px;
   position: relative;
   top: 45px;
-  right: -8px;
+  right: -2px;
 }
 .divider1 {
   background: #f6f6f6;
